Second part of refactor pdf downloader